design/#11: shimmer 색상 추가

--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -2,5 +2,5 @@
 <resources>
     <color name="display_small">#FFFFFF</color>
     <color name="text_medium">#949494</color>
-
+    <color name="shimmer">#BBBBBB</color>
 </resources>
