design/#11: 색상 day/night 모드 추가

--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -3,4 +3,5 @@
     <color name="display_small">#FFFFFF</color>
     <color name="text_medium">#949494</color>
     <color name="shimmer">#BBBBBB</color>
+    <color name="background">#FF000000</color>
 </resources>
