--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,7 +9,11 @@
     <color name="white">#FFFFFFFF</color>
 
     <color name="display_small">#000000</color>
-    <color name="text_medium">#666666</color>
-    <color name="shimmer">#999999</color>
+    <color name="text_medium">#FF4E4B66</color>
+    <color name="shimmer">#C3C3C3</color>
     <color name="background">#FFFFFFFF</color>
+    <color name="text_title">#000000</color>
+    <color name="body">#4E4B66</color>
+    <color name="input_background">#fff</color>
+    <color name="placeholder">#A0A3BD</color>
 </resources>
